--- a/app/views/layouts/main-fetf.html
+++ b/app/views/layouts/main-fetf.html
@@ -9,7 +9,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 {% block header %}
 {{ govukHeader({
   useTudorCrown: true,
-  serviceName: "Apply for a farming grant",
+  serviceName: "Apply for a farming productivity grant",
   serviceUrl: "/fetf/index"
 }) }}
 {% endblock %}
