--- a/app/views/fetf/_includes/filters/filters-panel.html
+++ b/app/views/fetf/_includes/filters/filters-panel.html
@@ -3,7 +3,7 @@
   
 <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Filter by</h2>
 
-     <form  method="post" novalidate action="/items/equipment-list/apply-filters">
+     <form  method="post" novalidate action="/fetf/application/v1-0/items/equipment-list/apply-filters">
 
       {{ govukInput({
         id: 'keywords',
@@ -25,6 +25,11 @@
         },
         items: [
           {
+            value: 'Arable',
+            text: 'Arable',
+            checked:  checked("category", "Arable")
+          },
+          {
             value: 'Forestry',
             text: 'Forestry',
             checked:  checked("category", "Forestry")
@@ -35,9 +40,9 @@
             checked:  checked("category", "General")
           },
           {
-            value: 'Horticultural',
-            text: 'Horticultural',
-            checked:  checked("category", "Horticultural")
+            value: 'Horticulture',
+            text: 'Horticulture',
+            checked:  checked("category", "Horticulture")
           },
           {
             value: 'Livestock',
@@ -45,14 +50,14 @@
             checked:  checked("category", "Livestock")
           },
           {
-            value: 'Precision and analysis',
-            text: 'Precision and analysis',
-            checked:  checked("category", "Precision and analysis")
+            value: 'Resource and energy management',
+            text: 'Resource and energy management',
+            checked:  checked("category", "Resource and energy management")
           },
           {
-            value: 'Resource management',
-            text: 'Resource management',
-            checked:  checked("category", "Resource management")
+            value: 'Water and irrigation management',
+            text: 'Water and irrigation management',
+            checked:  checked("category", "Water and irrigation management")
           }
         ]
       }) }}
