--- a/app/views/fetf/application/v1-0/items/equipment.html
+++ b/app/views/fetf/application/v1-0/items/equipment.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-fetf.html" %}
 
-{% block pageTitle %} Item details {% endblock %}
+{% block pageTitle %} {{ item.title }} {% endblock %}
 
 
 {% block beforeContent %}
@@ -31,26 +31,43 @@
 
     <p class="govuk-body-l">{{ item.summary }}</p>
 
-    <p class="govuk-body"><strong>Grant amount per item: </strong>£{{ item.value }}</p>
+
+    <p class="govuk-body"><strong>Grant amount per item: </strong>£{{ item.grantValue }}</p>
     <p class="govuk-body-s"><strong>Expected average cost of item: </strong>£{{ item.averageValue }}</p>
+    <p class="govuk-body-s"><strong>Percentage paid towards item: </strong>{{ item.grantPercentage }}%</p>
+    <hr>
     <p class="govuk-body"><strong>Item score: </strong>{{ item.score }}</p>
     <details class="govuk-details">
       <summary class="govuk-details__summary">
         <span class="govuk-details__summary-text">
-          Scoring criteria
+          How items are scored
         </span>
       </summary>
       <div class="govuk-details__text">
-        <p class="govuk-body">Each item has been assigned a score out of 100 based on certain criteria.</p>
+        <p class="govuk-body">Applications for productivity items are scored on:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>productivity benefit</li>
+          <li>environmental benefit</li>
+          <li>level of adoption by the industry</li>
+        </ul>
+        <p class="govuk-body">Each productivity item has a score up to 100.</p>
+        <p class="govuk-body">The RPA will give your application a score by:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>adding together the scores for each item in your application (if you apply for more than one of the same item, the item will only be scored once)</li>
+          <li>dividing this number by the number of items in your application (if you apply for more than one of the same item, the item will only be counted once)</li>
+        </ul>
+
+        <!-- <p class="govuk-body">Each item has been assigned a score out of 100 based on certain criteria.</p>
 <p class="govuk-body">For Productivity and Slurry items, this criteria is:</p>
 <ul class="govuk-list govuk-list--bullet">
   <li>productivity</li>
   <li>environmental benefit</li>
   <li>level of adoption by the industry (items not in widespread use have a higher score)</li>
-</ul>
+</ul> -->
       </div>
     </details>
-
+    <hr>
+<!--     
 {% if item.description %}
 
 <h2 class="govuk-heading-m">Overview</h2>
@@ -69,19 +86,54 @@
 </ul>
 
 {% endif %}
+ -->
 
+{% if item.eligible %}
 
-{% if item.eligibility %}
-
-<h2 class="govuk-heading-m">Eligibility criteria</h2>
+<h2 class="govuk-heading-m">Items must:</h2>
 <ul class="govuk-list govuk-list--bullet">
-  {% if item.eligibility.eligibiltyBullet01 %}<li>{{ item.eligibility.eligibiltyBullet01 }}</li>{% endif %}
-  {% if item.eligibility.eligibiltyBullet02 %}<li>{{ item.eligibility.eligibiltyBullet02 }}</li>{% endif %}
-  {% if item.eligibility.eligibiltyBullet03 %}<li>{{ item.eligibility.eligibiltyBullet03 }}</li>{% endif %}
-  {% if item.eligibility.eligibiltyBullet04 %}<li>{{ item.eligibility.eligibiltyBullet04 }}</li>{% endif %}
-  {% if item.eligibility.eligibiltyBullet05 %}<li>{{ item.eligibility.eligibiltyBullet05 }}</li>{% endif %}
+  {% if item.eligible.eligibleBullet01 %}<li>{{ item.eligible.eligibleBullet01 }}</li>{% endif %}
+  {% if item.eligible.eligibleBullet02 %}<li>{{ item.eligible.eligibleBullet02 }}</li>{% endif %}
+  {% if item.eligible.eligibleBullet03 %}<li>{{ item.eligible.eligibleBullet03 }}</li>{% endif %}
+  {% if item.eligible.eligibleBullet04 %}<li>{{ item.eligible.eligibleBullet04 }}</li>{% endif %}
+  {% if item.eligible.eligibleBullet05 %}<li>{{ item.eligible.eligibleBullet05 }}</li>{% endif %}
+  {% if item.eligible.eligibleBullet06 %}<li>{{ item.eligible.eligibleBullet06 }}</li>{% endif %}
+  {% if item.eligible.eligibleBullet07 %}<li>{{ item.eligible.eligibleBullet07 }}</li>{% endif %}
+  {% if item.eligible.eligibleBullet08 %}<li>{{ item.eligible.eligibleBullet08 }}</li>{% endif %}
+  {% if item.eligible.eligibleBullet09 %}<li>{{ item.eligible.eligibleBullet09 }}</li>{% endif %}
+  {% if item.eligible.eligibleBullet10 %}<li>{{ item.eligible.eligibleBullet10 }}</li>{% endif %}
 </ul>
 
+{% if item.eligible.eligibleText01 %}<p class="govuk-body">{{ item.eligible.eligibleText01 }}</p>{% endif %}
+{% if item.eligible.eligibleText02 %}<p class="govuk-body">{{ item.eligible.eligibleText02 }}</p>{% endif %}
+{% if item.eligible.eligibleText03 %}<p class="govuk-body">{{ item.eligible.eligibleText03 }}</p>{% endif %}
+{% if item.eligible.eligibleText04 %}<p class="govuk-body">{{ item.eligible.eligibleText04 }}</p>{% endif %}
+{% if item.eligible.eligibleText05 %}<p class="govuk-body">{{ item.eligible.eligibleText05 }}</p>{% endif %}
+
+{% endif %}
+
+
+{% if item.notEligible %}
+
+<h2 class="govuk-heading-m">The following are not eligible:</h2>
+<ul class="govuk-list govuk-list--bullet">
+  {% if item.notEligible.notEligibleBullet01 %}<li>{{ item.notEligible.notEligibleBullet01 }}</li>{% endif %}
+  {% if item.notEligible.notEligibleBullet02 %}<li>{{ item.notEligible.notEligibleBullet02 }}</li>{% endif %}
+  {% if item.notEligible.notEligibleBullet03 %}<li>{{ item.notEligible.notEligibleBullet03 }}</li>{% endif %}
+  {% if item.notEligible.notEligibleBullet04 %}<li>{{ item.notEligible.notEligibleBullet04 }}</li>{% endif %}
+  {% if item.notEligible.notEligibleBullet05 %}<li>{{ item.notEligible.notEligibleBullet05 }}</li>{% endif %}
+  {% if item.notEligible.notEligibleBullet06 %}<li>{{ item.notEligible.notEligibleBullet06 }}</li>{% endif %}
+  {% if item.notEligible.notEligibleBullet07 %}<li>{{ item.notEligible.notEligibleBullet07 }}</li>{% endif %}
+  {% if item.notEligible.notEligibleBullet08 %}<li>{{ item.notEligible.notEligibleBullet08 }}</li>{% endif %}
+  {% if item.notEligible.notEligibleBullet09 %}<li>{{ item.notEligible.notEligibleBullet09 }}</li>{% endif %}
+  {% if item.notEligible.notEligibleBullet10 %}<li>{{ item.notEligible.notEligibleBullet10 }}</li>{% endif %}
+</ul>
+
+{% endif %}
+
+
+{% if item.serialNumber %}
+<p class="govuk-body">You must provide this item’s serial number when you submit your claim for payment.</p>
 {% endif %}
 
 
@@ -124,7 +176,7 @@
   </div>
   <div class="govuk-grid-column-one-third">
     {% include "../../../_includes/selected-items-panel.html" %}
-    <p class="govuk-body-s">The minimum grant you can apply for is £1,000 and the maximum grant is £25,000.</p>
+    <p class="govuk-body-s">The minimum grant you can apply for is £1,000 and the maximum grant is £50,000.</p>
     <!-- <p class="govuk-body-s">You can apply for a total of £50,000 over multiple rounds.</p> -->
   </div>
 
