--- a/app/views/fetf/application/v1-0/about-items/equipment-address.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-address.html
@@ -14,6 +14,8 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <form method="post" action="/grant-items-location">
+
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -38,6 +40,8 @@
     <button type="submit" class="govuk-button" data-module="govuk-button">
       Save and continue
     </button>
+
+    </form>
 
   </div>
 
