FTF errors & FETF content changes

--- a/app/views/fetf/claim/v1-0/salad2.html
+++ b/app/views/fetf/claim/v1-0/salad2.html
@@ -62,7 +62,7 @@ Upload2
         Salad leaf harvester (FETF8)
       </h1>
 
-      <p class="govuk-body">Upload evidence to show the item is paid in full and in place.</p>
+      <p class="govuk-body">Upload evidence to show the item has been bought and paid in full, and is in place.</p>
 
 
 
@@ -134,7 +134,7 @@ function showVisualEvidenceSection() {
 <div class="govuk-grid-column-two-thirds">
 
 <p class="govuk-label govuk-label--m">Visual evidence</p>
-<p class="govuk-body">For example, photos and videos</p>
+<p class="govuk-body">For example, photos and videos showing the item</p>
 <p class="govuk-body" style="color: #505A5F;">Supported file types are JPG, PNG, PDF, MOV or MP4. Maximum file size is 20MB.</p><br>
 
 
