--- a/app/views/ftf/claim/v3-0/errors/upload4.html
+++ b/app/views/ftf/claim/v3-0/errors/upload4.html
@@ -31,13 +31,13 @@
     <div class="govuk-error-summary__body">
       <ul class="govuk-list govuk-error-summary__list">
         <li>
-          <a href="#" id="claim-form-target">The selected file must be a DOC or DOCX</a>
+          <a href="#" id="claim-form-target">The file must be a DOC or DOCX</a>
         </li>
         <li>
-          <a href="#" id="financial-evidence-section">The selected file must be a PDF, DOC, DOCX, XLS, XLSX, or JPG</a>
+          <a href="#" id="financial-evidence-section">The file must be a PDF, DOC, DOCX, XLS, XLSX, or JPG</a>
         </li>
         <li>
-          <a href="#" id="financial-evidence-section2">The selected file must be smaller than 20MB</a>
+          <a href="#" id="financial-evidence-section2">The file must be smaller than 20MB</a>
         </li>
       </ul>
     </div>
@@ -108,7 +108,7 @@
         <strong>Upload a file</strong>
       </label>
       <p id="file-upload-1-error" class="govuk-error-message">
-        <span class="govuk-visually-hidden">Error:</span> The selected file must be a DOC or DOCX
+        <span class="govuk-visually-hidden">Error:</span> The file must be a DOC or DOCX
       </p>
       <input class="govuk-file-upload govuk-file-upload--error" id="file-upload-1" name="fileUpload1" type="file" aria-describedby="file-upload-1-error">
   </div>
@@ -197,14 +197,14 @@
       <p class="govuk-body" style="margin-bottom: 0; color: #d4351c;">Financial evidence 3.zip , 7MB</p>
     </div>
     <br>
-    <p id="file-upload-1-error" class="govuk-error-message">The selected file must be a PDF, DOC, DOCX, XLS, XLSX, or JPG</p>
+    <p id="file-upload-1-error" class="govuk-error-message">The file must be a PDF, DOC, DOCX, XLS, XLSX, or JPG</p>
     <hr style="margin: 20px 0;">
 
     <div style="display: flex; justify-content: space-between; align-items: center;">
       <p class="govuk-body" style="margin-bottom: 0; color: #d4351c;">Financial evidence 4.jpg , 23MB</p>
     </div>
     <br>
-    <p id="file-upload-1-error" class="govuk-error-message">The selected file must be smaller than 20MB</p>
+    <p id="file-upload-1-error" class="govuk-error-message">The file must be smaller than 20MB</p>
     <hr style="margin: 20px 0;">
 
   </div>
@@ -239,7 +239,7 @@
 <div>
   <h3 class="govuk-heading-m" id="visual-evidence-section">Visual evidence</h3>
 
-  <p class="govuk-body">For example, photos and videos</p>
+  <p class="govuk-body">For example, photos and videos showing the item</p>
   
 
 
