--- a/app/views/ftf/claim/v3-0/upload1b.html
+++ b/app/views/ftf/claim/v3-0/upload1b.html
@@ -116,7 +116,7 @@
     
     <div>
       <h3 class="govuk-heading-m">Visual evidence</h3>
-      <p class="govuk-body">For example, photos and videos</p>
+      <p class="govuk-body">For example, photos and videos showing the item</p>
       
       <div style="width: 630px; height: 202px; position: relative">
         <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
