--- a/app/views/ftf/claim/v3-0/upload4.html
+++ b/app/views/ftf/claim/v3-0/upload4.html
@@ -150,7 +150,7 @@
 <div>
   <h3 class="govuk-heading-m" id="visual-evidence-section">Visual evidence</h3>
 
-  <p class="govuk-body">For example, photos and videos</p>
+  <p class="govuk-body">For example, photos and videos showing the item</p>
   
 
 
