FTF & FETF error messages update

--- a/app/views/fetf/claim/v1-0/errors/submit.html
+++ b/app/views/fetf/claim/v1-0/errors/submit.html
@@ -65,8 +65,8 @@
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
           <span class="govuk-warning-text__assistive"></span>
-          You may face legal action, your agreement terminated and repayment of funding if you provide false information. You could also be barred from the Agriculture Act 2020 scheme and other financial aid.</strong>
-      </div>
+          If you knowingly or recklessly make a false statement to obtain payments to yourself or others, you risk prosecution, termination of any resulting agreement, and recovery of any monies paid to you under the scheme. You may be excluded from this scheme and from other financial assistance under the Agriculture Act 2020 for up to two years.        </strong>
+        </div>
 
 
       <style>
