--- a/app/views/ftf/application/v3-0/errors/financial1.html
+++ b/app/views/ftf/application/v3-0/errors/financial1.html
@@ -132,7 +132,7 @@
       <p class="govuk-body" style="margin-bottom: 0; color: #d4351c;">Financial evidence 3.zip , 7MB</p>
     </div>
     <br>
-    <p id="file-upload-1-error" class="govuk-error-message">The file must be a PDF, DOC, DOCX, XLS, XLSX, or JPG</p>
+    <p id="file-upload-1-error" class="govuk-error-message">The file must be a PDF, DOC, DOCX, XLS, XLSX or JPG</p>
     <hr style="margin: 20px 0;">
 
     <div style="display: flex; justify-content: space-between; align-items: center;">
