--- a/app/views/ftf/application/v3-0/errors/financial3a.html
+++ b/app/views/ftf/application/v3-0/errors/financial3a.html
@@ -125,7 +125,7 @@
     
     <div class="govuk-form-group govuk-form-group--error">
     <div style="display: flex; justify-content: space-between; align-items: center;">
-      <p class="govuk-body" style="margin-bottom: 0; color: #d4351c;"><strong>Financial evidence 3.zip must be a PDF, DOC, DOCX, XLS, XLSX, or JPG</strong></p>
+      <p class="govuk-body" style="margin-bottom: 0; color: #d4351c;"><strong>Financial evidence 3.zip must be a PDF, DOC, DOCX, XLS, XLSX or JPG</strong></p>
     </div>
     </div>
 
