FETF Productivity Application amends

--- a/app/views/fetf/application/v1-0/about-items/equipment-summary.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-summary.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-fetf.html" %}
 
-{% block pageTitle %} Home – GOV.UK Prototype Kit {% endblock %}
+{% block pageTitle %} Equipment details summary {% endblock %}
 
 {% block beforeContent %}
 {% include "../../../_includes/phase-banner_alpha.html" %}
@@ -12,8 +12,41 @@
 <main class="govuk-main-wrapper">
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+
+    <span class="govuk-caption-l">About your equipment</span>
+
+    <form action="/fetf-items-summary" method="post">
+
     <h1 class="govuk-heading-l">Equipment details summary</h1>
 
+    <h2 class="govuk-heading-m">Livestock information</h2>
+
+    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Total number of bovine animals
+        </dt>
+        <dd class="govuk-summary-list__value">
+          40
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> answer</span></a>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          County parish holding number
+        </dt>
+        <dd class="govuk-summary-list__value">
+          08/123/4567
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> answer</span></a>
+        </dd>
+      </div>
+    </dl>
+
+    <h2 class="govuk-heading-m">Equipment location</h2>
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
@@ -27,6 +60,12 @@
           <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> answer</span></a>
         </dd>
       </div>
+    </dl>
+
+
+    <h2 class="govuk-heading-m">Equipment contracting</h2>
+
+    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
           Used for contracting
@@ -43,6 +82,8 @@
 <button type="submit" class="govuk-button" data-module="govuk-button">
   Save and continue
 </button>
+
+</form>
 
 </div>
 </div>
