--- a/app/views/fetf/_includes/activity-list_task-section_apply.html
+++ b/app/views/fetf/_includes/activity-list_task-section_apply.html
@@ -118,7 +118,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your equipment</a>
+        <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/about-items/livestock-information" aria-describedby="application-details-2-status">About your equipment</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
         <strong class="govuk-tag govuk-tag--blue">
@@ -129,7 +129,7 @@
   
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
-        <div>Check your business and personal details</div>
+        <div>Check your details</div>
       </div>
       <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
         Cannot start yet
@@ -179,7 +179,7 @@
   
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
-        <div>Check your business and personal details</div>
+        <div>Check your details</div>
       </div>
       <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
         Cannot start yet
@@ -227,7 +227,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+        <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/business-details/business-structure" aria-describedby="application-details-2-status">About your business</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
         <strong class="govuk-tag govuk-tag--blue">
@@ -276,7 +276,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
         <strong class="govuk-tag govuk-tag--light-blue">
@@ -325,7 +325,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -374,7 +374,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -421,7 +421,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -477,7 +477,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
