--- a/app/views/fetf/_includes/activity-list_task-section_claim.html
+++ b/app/views/fetf/_includes/activity-list_task-section_claim.html
@@ -8,31 +8,14 @@
     
     <ul class="govuk-task-list">
 
-
-      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-0/claim-detail" aria-describedby="application-details-2-status">Check claim details</a>
+          <div>Check claim details</div>
         </div>
-        <div class="govuk-task-list__status" id="application-details-4-status">
-          <strong class="govuk-tag govuk-tag--blue">
-            Not yet started
-          </strong>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+          Cannot start yet
         </div>
       </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -53,9 +36,44 @@
       </li>
     </ul>
 
-
-
     {% elif (data['fetf-claim'] == "02a") %}
+
+    <h2 class="govuk-prototype-kit-task-list__section">
+      <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit claim
+    </h2>
+    
+    <ul class="govuk-task-list">
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="../../claim/v1-0/claim-detail" aria-describedby="application-details-2-status">Check claim details</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-4-status">
+        <strong class="govuk-tag govuk-tag--blue">
+          Not yet started
+        </strong>
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <div>Upload claim evidence</div>
+      </div>
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        Cannot start yet
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <div>Submit claim</div>
+      </div>
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        Cannot start yet
+      </div>
+    </li>
+  </ul>
+
+    {% elif (data['fetf-claim'] == "02b") %}
 
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit claim
@@ -96,7 +114,7 @@
 
 
 
-    {% elif (data['fetf-claim'] == "02b") %}
+    {% elif (data['fetf-claim'] == "02c") %}
 
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit claim
@@ -135,7 +153,7 @@
     </ul>
 
 
-    {% elif (data['fetf-claim'] == "02c") %}
+    {% elif (data['fetf-claim'] == "02d") %}
 
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">3. </span> Submit claim
