--- a/app/views/fetf/application/v1-0/about-items/equipment-address.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-address.html
@@ -14,9 +14,10 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form method="post" action="/grant-items-location">
+    <form action="/fetf-items-business-address" method="post">
 
     <div class="govuk-form-group">
+      <span class="govuk-caption-l">About your equipment</span>
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           Will you store the equipment at the main business address?
