--- a/app/views/fetf/application/v1-0/about-items/equipment-contracting.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-contracting.html
@@ -14,7 +14,10 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <form action="/fetf-items-contracting" method="post">
+
     <div class="govuk-form-group">
+      <span class="govuk-caption-l">About your equipment</span>
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           Will the equipment be used for contracting?
@@ -38,6 +41,7 @@
     <button type="submit" class="govuk-button" data-module="govuk-button">
       Save and continue
     </button>
+  </form>
 
   </div>
 
