--- a/app/views/fetf/application/v1-0/items/equipment.html
+++ b/app/views/fetf/application/v1-0/items/equipment.html
@@ -27,11 +27,14 @@
 
     <!-- <span class="govuk-caption-xl">{{ item.section }}</span> -->
 
-    <h1 class="govuk-heading-l">{{ item.title }} (FETF{{ item.sectionNumber }})</h1>
+    <form action="/fetf-items-selection" method="post">
+
+    <h1 class="govuk-heading-l">{{ item.title }} (FETF{{ item.itemCode }})</h1>
 
     <p class="govuk-body-l">{{ item.summary }}</p>
 
     <p class="govuk-body-l"><strong>Grant amount per item: </strong>£{{ item.grantValue }}</p>
+    <p class="govuk-body-s"><strong>Maximum quantity of this item: </strong>3</p>
     <p class="govuk-body-s"><strong>Expected average cost of item: </strong>£{{ item.averageValue }}</p>
     <p class="govuk-body-s"><strong>Percentage paid towards item: </strong>{{ item.grantPercentage }}%</p>
     <hr style="margin-bottom: 20px; margin-top: 20px;">
@@ -160,7 +163,7 @@
 </div> -->
 
 <span>
-<button type="submit" class="govuk-button" data-module="govuk-button">
+<button type="submit" class="govuk-button" data-module="govuk-button" name="selectThisItem">
   Select this item
 </button>
 </span>
@@ -168,13 +171,14 @@
 
 
 <span style="clear: both; display: block;">
-<button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+<button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button" name="viewOtherItems">
   View other items
 </button>
 </span>
 
-    
+</form>  
   </div>
+
   <div class="govuk-grid-column-one-third">
     {% include "../../../_includes/selected-items-panel.html" %}
     <p class="govuk-body-s">The minimum grant you can apply for is £1,000 and the maximum grant is £50,000.</p>
