FETF claim error message update

--- a/app/views/fetf/claim/v1-0/errors/paper-pot2c.html
+++ b/app/views/fetf/claim/v1-0/errors/paper-pot2c.html
@@ -70,7 +70,7 @@ Error
 <div class="govuk-grid-row">
 <div class="govuk-grid-column-two-thirds">
 
-  <p class="govuk-label govuk-label--m" id="fin">Financial evidence</p>
+  <p class="govuk-label govuk-label--m" id="fin2">Financial evidence</p>
   <p class="govuk-body">For example, invoices, receipts and bank statements (you can cross out other transactions)</p>
   <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, XLS, XLSX or JPG. Maximum file size is 20MB.</p><br>
 
