--- a/app/views/fetf/claim/v1-0/upload(anti-fraud).html
+++ b/app/views/fetf/claim/v1-0/upload(anti-fraud).html
@@ -45,260 +45,94 @@
 
       <br>
 
-      <p class="govuk-body"><strong>Item description</strong></p>
-
- 
 
 
       <ol class="govuk-prototype-kit-task-list">
         
         <li style="list-style: none; margin: 0; padding: 0;">
           <ul class="govuk-prototype-kit-task-list__items" style="padding-left: 0;">
-           
-          {% if (data['01'] == "n") %}
 
-          <li class="govuk-task-list__item govuk-task-list__item--with-link">
-            <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="paper-pot?sn=no" aria-describedby="application-details-2-status">Paper pot transplanter (FETF4)</a>
-            </div>
-            <div class="govuk-task-list__status" id="application-details-4-status">
-              <strong class="govuk-tag govuk-tag--blue">
-                Not yet started
-              </strong>
-          </div>
-          </li>
 
-          {% elif (data['01'] == "i") %}
+      <p class="govuk-body"><strong>Item description</strong></p>
 
-          <li class="govuk-task-list__item govuk-task-list__item--with-link">
-            <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="paper-pot?sn=no" aria-describedby="application-details-2-status">Paper pot transplanter (FETF4)</a>
-            </div>
-            <div class="govuk-task-list__status" id="application-details-4-status">
-              <strong class="govuk-tag govuk-tag--light-blue">
-                In progress
-              </strong>
-          </div>
-          </li>
 
-          {% elif (data['01'] == "c") %}
-
-            <li class="govuk-task-list__item govuk-task-list__item--with-link">
-              <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="paper-pot?sn=no" aria-describedby="application-details-2-status">Paper pot transplanter (FETF4)</a>
-              </div>
-              <div class="govuk-task-list__status" id="application-details-4-status">
-                Completed
-            </div>
-            </li>
-
-          {% endif %}
-
-          
-
-          {% if (data['02'] == "n") %}
-
-          <li class="govuk-task-list__item govuk-task-list__item--with-link">
-            <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="salad?sn=no" aria-describedby="application-details-2-status">Salad leaf harvester (FETF8)</a>
-            </div>
-            <div class="govuk-task-list__status" id="application-details-4-status">
-              <strong class="govuk-tag govuk-tag--blue">
-                Not yet started
-              </strong>
-          </div>
-          </li>
-
-          {% elif (data['02'] == "i") %}
-
-          <li class="govuk-task-list__item govuk-task-list__item--with-link">
-            <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="salad?sn=no" aria-describedby="application-details-2-status">Salad leaf harvester (FETF8)</a>
-            </div>
-            <div class="govuk-task-list__status" id="application-details-4-status">
-              <strong class="govuk-tag govuk-tag--light-blue">
-                In progress
-              </strong>
-          </div>
-          </li>
-
-          {% elif (data['02'] == "c") %}
-
-            <li class="govuk-task-list__item govuk-task-list__item--with-link">
-              <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="salad?sn=no" aria-describedby="application-details-2-status">Salad leaf harvester (FETF8)</a>
-              </div>
-              <div class="govuk-task-list__status" id="application-details-4-status">
-                Completed
-            </div>
-            </li>
-
-          {% endif %}
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Paper pot transplanter (FETF4)</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not yet started
+          </strong>
+      </div>
+      </li>
 
 
 
-          {% if (data['03'] == "n") %}
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Salad leaf harvester (FETF8)</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not yet started
+          </strong>
+      </div>
+      </li>
 
-          <li class="govuk-task-list__item govuk-task-list__item--with-link">
-            <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="harvest?sn=yes" aria-describedby="application-details-2-status">Harvesting head (FETF13)</a>
-            </div>
-            <div class="govuk-task-list__status" id="application-details-4-status">
-              <strong class="govuk-tag govuk-tag--blue">
-                Not yet started
-              </strong>
-          </div>
-          </li>
+ 
 
-          {% elif (data['03'] == "i") %}
-
-          <li class="govuk-task-list__item govuk-task-list__item--with-link">
-            <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="harvest?sn=yes" aria-describedby="application-details-2-status">Harvesting head (FETF13)</a>
-            </div>
-            <div class="govuk-task-list__status" id="application-details-4-status">
-              <strong class="govuk-tag govuk-tag--light-blue">
-                In progress
-              </strong>
-          </div>
-          </li>
-
-          {% elif (data['03'] == "c") %}
-
-            <li class="govuk-task-list__item govuk-task-list__item--with-link">
-              <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="harvest?sn=yes" aria-describedby="application-details-2-status">Harvesting head (FETF13)</a>
-              </div>
-              <div class="govuk-task-list__status" id="application-details-4-status">
-                Completed
-            </div>
-            </li>
-
-          {% endif %}
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Harvesting head (FETF13)</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not yet started
+          </strong>
+      </div>
+      </li>
 
 
 
-          {% if (data['04'] == "n") %}
-
-          <li class="govuk-task-list__item govuk-task-list__item--with-link">
-            <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="slurry?sn=no" aria-describedby="application-details-2-status">Slurry separators (FETF27)</a>
-            </div>
-            <div class="govuk-task-list__status" id="application-details-4-status">
-              <strong class="govuk-tag govuk-tag--blue">
-                Not yet started
-              </strong>
-          </div>
-          </li>
-
-          {% elif (data['04'] == "i") %}
-
-          <li class="govuk-task-list__item govuk-task-list__item--with-link">
-            <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="slurry?sn=no" aria-describedby="application-details-2-status">Slurry separators (FETF27)</a>
-            </div>
-            <div class="govuk-task-list__status" id="application-details-4-status">
-              <strong class="govuk-tag govuk-tag--light-blue">
-                In progress
-              </strong>
-          </div>
-          </li>
-
-          {% elif (data['04'] == "c") %}
-
-            <li class="govuk-task-list__item govuk-task-list__item--with-link">
-              <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="slurry?sn=no" aria-describedby="application-details-2-status">Slurry separators (FETF27)</a>
-              </div>
-              <div class="govuk-task-list__status" id="application-details-4-status">
-                Completed
-            </div>
-            </li>
-
-          {% endif %}
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Slurry separators (FETF27)</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not yet started
+          </strong>
+      </div>
+      </li>
 
 
-
-          {% if (data['05'] == "n") %}
-
-          <li class="govuk-task-list__item govuk-task-list__item--with-link">
-            <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="shoe?sn=yes" aria-describedby="application-details-2-status">Trailing shoe slurry system over 8m (FETF37)</a>
-            </div>
-            <div class="govuk-task-list__status" id="application-details-4-status">
-              <strong class="govuk-tag govuk-tag--blue">
-                Not yet started
-              </strong>
-          </div>
-          </li>
-
-          {% elif (data['05'] == "i") %}
-
-          <li class="govuk-task-list__item govuk-task-list__item--with-link">
-            <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="shoe?sn=yes" aria-describedby="application-details-2-status">Trailing shoe slurry system over 8m (FETF37)</a>
-            </div>
-            <div class="govuk-task-list__status" id="application-details-4-status">
-              <strong class="govuk-tag govuk-tag--light-blue">
-                In progress
-              </strong>
-          </div>
-          </li>
-
-          {% elif (data['05'] == "c") %}
-
-            <li class="govuk-task-list__item govuk-task-list__item--with-link">
-              <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="shoe?sn=yes" aria-describedby="application-details-2-status">Trailing shoe slurry system over 8m (FETF37)</a>
-              </div>
-              <div class="govuk-task-list__status" id="application-details-4-status">
-                Completed
-            </div>
-            </li>
-
-          {% endif %}
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Trailing shoe slurry system over 8m (FETF37)</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not yet started
+          </strong>
+      </div>
+      </li>
 
 
 
 
-          {% if (data['06'] == "n") %}
 
-          <li class="govuk-task-list__item govuk-task-list__item--with-link">
-            <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="gps?sn=no" aria-describedby="application-details-2-status">GPS light bar (FETF46)</a>
-            </div>
-            <div class="govuk-task-list__status" id="application-details-4-status">
-              <strong class="govuk-tag govuk-tag--blue">
-                Not yet started
-              </strong>
-          </div>
-          </li>
 
-          {% elif (data['06'] == "i") %}
-
-          <li class="govuk-task-list__item govuk-task-list__item--with-link">
-            <div class="govuk-task-list__name-and-hint">
-              <a class="govuk-link govuk-task-list__link" href="gps?sn=no" aria-describedby="application-details-2-status">GPS light bar (FETF46)</a>
-            </div>
-            <div class="govuk-task-list__status" id="application-details-4-status">
-              <strong class="govuk-tag govuk-tag--light-blue">
-                In progress
-              </strong>
-          </div>
-          </li>
-
-          {% elif (data['06'] == "c") %}
-
-            <li class="govuk-task-list__item govuk-task-list__item--with-link">
-              <div class="govuk-task-list__name-and-hint">
-                <a class="govuk-link govuk-task-list__link" href="gps?sn=no" aria-describedby="application-details-2-status">GPS light bar (FETF46)</a>
-              </div>
-              <div class="govuk-task-list__status" id="application-details-4-status">
-                Completed
-            </div>
-            </li>
-
-          {% endif %}
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">GPS light bar (FETF46)</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not yet started
+          </strong>
+      </div>
+      </li>
 
 
 <br>
