FTF Agreement checkbox fix

--- a/app/views/ftf/agreement/v2-0/accept-grant-funding-agreement.html
+++ b/app/views/ftf/agreement/v2-0/accept-grant-funding-agreement.html
@@ -37,7 +37,7 @@ Accept grant funding agreement
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="agreement" name="agreement" type="checkbox" value="agreementConfirmed">
-                <label class="govuk-label govuk-checkboxes__label" for="countries">
+                <label class="govuk-label govuk-checkboxes__label" for="agreement">
                   I confirm
                 </label>
               </div>
