--- a/app/views/ftf/agreement/v2-0/review-terms-and-conditions.html
+++ b/app/views/ftf/agreement/v2-0/review-terms-and-conditions.html
@@ -24,13 +24,15 @@ Review terms and conditions
         {% include "../../_includes/body-content_terms-and-conditions-main-block.html" %}
 
 
+    
+
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="agreement" name="agreement" type="checkbox" value="agreementConfirmed">
-                <label class="govuk-label govuk-checkboxes__label" for="countries">
+                <label class="govuk-label govuk-checkboxes__label" for="agreement">
                   I confirm that I have read, understood and agree to the terms and conditions
                 </label>
               </div>
