FTF confirmation update

--- a/app/views/ftf/application/v3-0/confirmation.html
+++ b/app/views/ftf/application/v3-0/confirmation.html
@@ -61,7 +61,7 @@
         
         <h2 class="govuk-heading-m">What happens next</h2>
         <p class="govuk-body">
-          The RPA aim to process complete applications within 60 working days.<br><br>
+          The RPA aims to process complete applications within 60 working days.<br><br>
           The RPA will be in touch when they have assessed your full application. They will tell you if your project scored well enough to receive grant funding.<br><br>The RPA will assess your application against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.<br><br>If your application is successful, you’ll be sent a grant funding agreement and can begin work on the project.<br><br>
         </p>
 
