FETF end-to-end testing amends

--- a/app/views/fetf/_includes/activity-list_task-section_agreement.html
+++ b/app/views/fetf/_includes/activity-list_task-section_agreement.html
@@ -42,7 +42,7 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read agreement</a>
+          <a class="govuk-link govuk-task-list__link" href="../../agreement/v1-3/what-you-need-to-do" aria-describedby="application-details-1-status">Read agreement</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-1-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -89,7 +89,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read terms and conditions</a>
+          <a class="govuk-link govuk-task-list__link" href="../../agreement/v1-3/review-terms-and-conditions" aria-describedby="application-details-1-status">Read terms and conditions</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-1-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -170,7 +170,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Accept agreement</a>
+          <a class="govuk-link govuk-task-list__link" href="../../agreement/v1-3/accept-grant-funding-agreement" aria-describedby="application-details-1-status">Accept agreement</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-1-status">
           <strong class="govuk-tag govuk-tag--blue">
