--- a/app/views/fetf/awareness/how-to-apply-for-a-farming-equipment-and-technology-fund-fetf-2023-grant.html
+++ b/app/views/fetf/awareness/how-to-apply-for-a-farming-equipment-and-technology-fund-fetf-2023-grant.html
@@ -232,7 +232,7 @@
         <p class="govuk-body">Do not leave spaces in the boxes after you have typed in your information, as this will cause the portal to say the information is incorrect and won’t allow you to move on.</p>
         <p class="govuk-body">You should check your application thoroughly before you submit it, to make sure the items you are applying for are suitable for your business needs and you can obtain them by the claim deadline.</p>
         <p class="govuk-body"><strong>Annex 3 - Productivity and Slurry grant</strong></p>
-        <a href="#" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+        <a href="../" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
           Apply now
           <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
             <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
