--- a/app/views/fetf/claim/v1-0/claim-detail.html
+++ b/app/views/fetf/claim/v1-0/claim-detail.html
@@ -15,7 +15,7 @@ Check claim details
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <form method="post" action="/fetf/claim/v1-0/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02a">
+        <form method="post" action="/fetf/claim/v1-0/?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02b">
 
         <span class="govuk-caption-xl">Claim for a FETF grant</span>
         <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check claim details</h1>
