--- a/app/views/fetf/claim/v1-0/summary.html
+++ b/app/views/fetf/claim/v1-0/summary.html
@@ -952,7 +952,7 @@
 
 <br><br><br>
 
-      <a href="index?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02c">
+      <a href="index?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02d">
         <button class="govuk-button" data-module="govuk-button">
           Continue
         </button>
