--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,9 @@
 
     <ul class="govuk-list">
       <li>
+        <a class="govuk-link" href="#end-to-end">End-to-end testing</a>
+      </li>
+      <li>
         <a class="govuk-link" href="#high-fidelity-design">High-fidelity design</a>
       </li>
       <li>
@@ -38,8 +41,20 @@
     </ul>
 
 
-<hr id="high-fidelity-design" style="margin: 40px 0;">
+<hr id="end-to-end" style="margin: 40px 0;">
 
+<h2 class="govuk-heading-l">End-to-end testing</h2>
+
+<h3 class="govuk-heading-m">FTF scenarios (February 2024)</h3>
+<p class="govuk-body">Prototype: <a class="govuk-link" href="/ftf/">FTF scenarios landing page</a></p>
+
+
+<h3 class="govuk-heading-m">FETF scenarios (May 2024)</h3>
+<p class="govuk-body">Prototype: <a class="govuk-link" href="/fetf/">FETF scenarios landing page</a></p>
+
+
+
+<hr id="high-fidelity-design" style="margin: 40px 0;">
 
     <h2 class="govuk-heading-l">High-fidelity design</h2>
 
